# whaleapi

./: launcher.py  main.py  pyproject.toml
api/: ext.py
data/: facts.json
