[tool.poetry]
name = "shadyplumpplots"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
"discord.py" = "^1.6.0"
fastapi = "^0.63.0"
loader = "^2017.9.11"
uvicorn = "^0.13.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
